--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="../public/tetris.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tetris</title>
   </head>
@@ -10,7 +10,7 @@
     <div id="app">
       <canvas></canvas>
     </div>
-    <strong>Puntuacion: <span></span></strong>
-    <script type="module" src="/main.js"></script>
+    <strong>Score: <span></span></strong>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
