--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       <canvas></canvas>
     </div>
     <strong>Score: <span></span></strong>
+    <strong>Level: <span id="level">1</span></strong>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
