Added visualization for upcoming piece

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app">
       <canvas></canvas>
+      <canvas class="next"></canvas>
     </div>
     <strong>Score: <span></span></strong>
     <script type="module" src="./js/main.js"></script>
