--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div id="app">
-      <canvas></canvas>
+      <canvas class="saved"></canvas>
+      <canvas id="board"></canvas>
       <canvas class="next"></canvas>
     </div>
     <strong>Score: <span></span></strong>
